Version 1.3 - 2015-01-22
* Manage fee overloading
* Module Creation